tests/baselines/reference/functionOverloads11.errors.txt
==== tests/cases/compiler/functionOverloads11.ts (1 errors) ====
    function foo():number;
    ~~~~~~~~~~~~~~~~~~~~~~
!!! functionOverloads11.ts(1,1): error TS2148: Overload signature is not compatible with function definition.
    function foo():string { return "" }
    